updating the notebooks to include more instructions and use relative paths

--- a/Basic_Classification_Examples.ipynb
+++ b/Basic_Classification_Examples.ipynb
@@ -12,7 +12,7 @@
     "* We show how to use AdaptiveRandomForest using its wrapper (```from ensembles import AdaptiveRandomForest```) and how to create MOA learners and wrap them using a MOALearner (```from MOALearners import MOAClassifier```).\n",
     "* Examples from MOA and River use the same CSV file.\n",
     "\n",
-    "**Notebook last update: 27/09/2023**"
+    "**Notebook last update: 20/10/2023**"
    ]
   },
   {
@@ -25,9 +25,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
+      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -42,15 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "60bb1d0d-66e3-45f1-b7cc-15ae08cbe81a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Datasets paths\n",
-    "csv_elec_tiny_path = '/Users/gomeshe/Desktop/data/electricity_tiny.csv'\n",
+    "csv_elec_tiny_path = './data/electricity_tiny.csv'\n",
     "\n",
-    "csv_elec_tiny_path = 'electricity_nuwan.csv'"
+    "# csv_elec_tiny_path = './data/electricity_tiny_nominal_class.csv'"
    ]
   },
   {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3d366b78-feeb-497a-8a05-578437600343",
    "metadata": {},
    "outputs": [],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d56e186b-a288-4953-9d95-74f25cfeff5e",
    "metadata": {},
    "outputs": [
@@ -83,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARFClassifier, 0.8600, 0.4573, 0.4531\n"
+      "ARFClassifier, 0.7241, 0.0097, 0.0100\n"
      ]
     }
    ],
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0d9c9d33-52b2-4442-a577-396de0bf31e7",
    "metadata": {},
    "outputs": [
@@ -109,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTreeClassifier, 0.8630, 0.0703, 0.0681\n"
+      "HoeffdingTreeClassifier, 0.7931, 0.0022, 0.0029\n"
      ]
     }
    ],
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "84f29ddd-2e97-4c31-945a-1129e8ca1833",
    "metadata": {},
    "outputs": [
@@ -132,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNNClassifier, 0.7620, 1.9057, 1.8971\n"
+      "KNNClassifier, 0.6897, 0.0011, 0.0011\n"
      ]
     }
    ],
@@ -155,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GaussianNB, 0.8490, 0.0322, 0.0359\n"
+      "GaussianNB, 0.7931, 0.0019, 0.0026\n"
      ]
     }
    ],
@@ -178,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SRPClassifier(HoeffdingTreeClassifier), 0.9170, 0.8618, 0.8561\n"
+      "SRPClassifier(HoeffdingTreeClassifier), 0.8276, 0.0232, 0.0237\n"
      ]
     }
    ],
@@ -204,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtremelyFastDecisionTreeClassifier, 0.8630, 0.3784, 0.3530\n"
+      "ExtremelyFastDecisionTreeClassifier, 0.7931, 0.0021, 0.0027\n"
      ]
     }
    ],
@@ -235,7 +236,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/stream.py:161: RuntimeWarning: invalid value encountered in cast\n",
+      "/Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/stream.py:243: RuntimeWarning: invalid value encountered in cast\n",
       "  return NumpyStream(X=X, y=y.astype(int), dataset_name=\"Elec\", feature_names=header[:-1], target_name=header[-1], enforce_regression=enforce_regression)\n"
      ]
     }
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "8b4a0ea7-8707-4bf3-8ce6-1f3a965497c0",
    "metadata": {},
    "outputs": [
@@ -260,7 +261,7 @@
        "['0']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9cf0778d-942f-44e2-bd79-e754e6c7735e",
    "metadata": {},
    "outputs": [
@@ -279,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AdaptiveRandomForest wallclock: 0.46613097190856934 cpu_time: 0.9091550000000002 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 89.45, 'Kappa Statistic (percent)': 78.10294728102947, 'Kappa Temporal Statistic (percent)': 24.9110320284697, 'Kappa M Statistic (percent)': 73.2233502538071}\n"
+      "AdaptiveRandomForest wallclock: 0.04669809341430664 cpu_time: 0.13924000000000003 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
      ]
     }
    ],
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1270cf7b-3bf1-4092-9498-f5e6f91aea64",
    "metadata": {},
    "outputs": [
@@ -302,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTree wallclock: 0.04388594627380371 cpu_time: 0.08845100000000095 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.65, 'Kappa Statistic (percent)': 64.11315010011087, 'Kappa Temporal Statistic (percent)': -23.487544483985793, 'Kappa M Statistic (percent)': 55.964467005076145}\n"
+      "HoeffdingTree wallclock: 0.0033457279205322266 cpu_time: 0.008777000000000257 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
      ]
     }
    ],
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "c8ac0b21-a3bf-488b-b5cb-ce6289298ee1",
    "metadata": {},
    "outputs": [
@@ -326,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN wallclock: 0.16757774353027344 cpu_time: 0.3459479999999999 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 80.55, 'Kappa Statistic (percent)': 59.525712097754244, 'Kappa Temporal Statistic (percent)': -38.43416370106766, 'Kappa M Statistic (percent)': 50.63451776649747}\n"
+      "kNN wallclock: 0.004328250885009766 cpu_time: 0.009232000000000795 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
      ]
     }
    ],
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "15ccd3c4-f0d6-479d-b773-df230cfdf2aa",
    "metadata": {},
    "outputs": [
@@ -349,7 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EFDT wallclock: 0.045812129974365234 cpu_time: 0.09315900000000177 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.69999999999999, 'Kappa Statistic (percent)': 64.22426628726465, 'Kappa Temporal Statistic (percent)': -23.131672597864835, 'Kappa M Statistic (percent)': 56.09137055837563}\n"
+      "EFDT wallclock: 0.0025169849395751953 cpu_time: 0.004997999999999614 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
      ]
     }
    ],
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e264098a-588a-456b-ae11-dced5b5ceb7f",
    "metadata": {},
    "outputs": [
@@ -372,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NaiveBayes wallclock: 0.03906869888305664 cpu_time: 0.07884200000000163 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 84.0, 'Kappa Statistic (percent)': 66.56748353448563, 'Kappa Temporal Statistic (percent)': -13.879003558718917, 'Kappa M Statistic (percent)': 59.39086294416243}\n"
+      "NaiveBayes wallclock: 0.0011181831359863281 cpu_time: 0.0023569999999999425 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
      ]
     }
    ],
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6fa952e8-08e3-4e6f-88ad-dac1aaea94ef",
    "metadata": {},
    "outputs": [
@@ -395,7 +396,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "StreamingRandomPatches wallclock: 0.2898409366607666 cpu_time: 0.5924649999999989 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 88.75, 'Kappa Statistic (percent)': 76.35402128768642, 'Kappa Temporal Statistic (percent)': 19.928825622775744, 'Kappa M Statistic (percent)': 71.4467005076142}\n"
+      "StreamingRandomPatches wallclock: 0.010870933532714844 cpu_time: 0.03796500000000069 metrics: {'classified instances': 29.0, 'classifications correct (percent)': 100.0, 'Kappa Statistic (percent)': nan, 'Kappa Temporal Statistic (percent)': nan, 'Kappa M Statistic (percent)': nan}\n"
      ]
     }
    ],
