--- a/Classification_Evaluator_Examples.ipynb
+++ b/Classification_Evaluator_Examples.ipynb
@@ -9,7 +9,7 @@
     "* ```ClassificationEvaluator``` and ```ClassificationWindowedEvaluator```\n",
     "* This notebook also includes **integration examples showing how to use ```MOA``` and ```River```** with these evaluators \n",
     "\n",
-    "**Notebook last update: 27/09/2023**"
+    "**Notebook last update: 20/10/2023**"
    ]
   },
   {
@@ -22,9 +22,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
+      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -34,7 +35,8 @@
     "import pandas as pd\n",
     "start_jpype()\n",
     "\n",
-    "from evaluation import ClassificationEvaluator, ClassificationWindowedEvaluator, Schema"
+    "from stream import Schema\n",
+    "from evaluation import ClassificationEvaluator, ClassificationWindowedEvaluator"
    ]
   },
   {
@@ -1100,7 +1102,7 @@
     "\n",
     "maxInstances=1000\n",
     "sampleFrequency=1000\n",
-    "rtg_2abrupt_path = '/Users/gomeshe/Desktop/data/RTG_2abrupt.csv'\n",
+    "rtg_2abrupt_path = './data/RTG_2abrupt.csv'\n",
     "dataset = pd.read_csv(rtg_2abrupt_path).to_numpy()\n",
     "\n",
     "model = ARFClassifier(\n",
