--- a/Data_Reading.ipynb
+++ b/Data_Reading.ipynb
@@ -12,7 +12,9 @@
     "  * ```ARFFStream(path=...)```: Class that inherits from ```Stream```\n",
     "  * ```numpy_to_ARFF(X, y, ...)```: Function that receives numpy ```X``` and ```y``` and returns an ```Instances``` (MOA) and ```Header``` \n",
     "  * ```NumpyStream(X, y, ...)```: Class that returns a ```Stream``` compatible object given a numpy ```X``` and ```y```\n",
-    "  * ```stream_from_file(path_to_csv_or_arff=...)```: Function that returns a ```Stream```"
+    "  * ```stream_from_file(path_to_csv_or_arff=...)```: Function that returns a ```Stream```\n",
+    " \n",
+    "**Notebook updated on 20/10/2023**"
    ]
   },
   {
@@ -27,9 +29,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
+      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -44,17 +47,9 @@
     "from ensembles import OnlineBagging\n",
     "from stream import *\n",
     "\n",
-    "arff_elec_path = '/Users/gomeshe/Desktop/data/electricity.arff'\n",
-    "csv_elec_path = '/Users/gomeshe/Desktop/data/electricity.csv'"
+    "arff_elec_path = './data/electricity.arff'\n",
+    "csv_elec_path = './data/electricity.csv'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91ae4168-41ec-4af7-ab6b-cf0b4c4582fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -249,8 +244,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 3.08 s, sys: 51.2 ms, total: 3.13 s\n",
-      "Wall time: 2.04 s\n"
+      "CPU times: user 3.12 s, sys: 45.8 ms, total: 3.16 s\n",
+      "Wall time: 2.14 s\n"
      ]
     }
    ],
@@ -449,8 +444,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 1.46 s, sys: 23.9 ms, total: 1.49 s\n",
-      "Wall time: 1.2 s\n"
+      "CPU times: user 783 ms, sys: 20.9 ms, total: 804 ms\n",
+      "Wall time: 483 ms\n"
      ]
     }
    ],
@@ -1223,13 +1218,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x14828dfa0>\n",
-      "<stream.Instance object at 0x107ace3a0>\n",
-      "<stream.Instance object at 0x14828dfa0>\n",
+      "<stream.Instance object at 0x111f92c10>\n",
+      "<stream.Instance object at 0x112024b50>\n",
+      "<stream.Instance object at 0x111f92c10>\n",
       "restarting stream...\n",
-      "<stream.Instance object at 0x107ace3a0>\n",
-      "<stream.Instance object at 0x14828dfa0>\n",
-      "<stream.Instance object at 0x107ace3a0>\n",
+      "<stream.Instance object at 0x112024b50>\n",
+      "<stream.Instance object at 0x111f92c10>\n",
+      "<stream.Instance object at 0x112024b50>\n",
       "Not a moa_stream, a numpy read file\n",
       "Read 45312 instances, total = 45312\n"
      ]
@@ -1484,7 +1479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x107ace2e0>\n"
+      "<stream.Instance object at 0x2ac8253a0>\n"
      ]
     },
     {
@@ -1516,7 +1511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x10fb4c9a0>\n",
+      "<stream.Instance object at 0x117d0b970>\n",
       "Not a moa_stream, a numpy read file\n"
      ]
     }
@@ -1546,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2e85947b-d712-4da7-b65f-7786a1ad1ee8",
    "metadata": {},
    "outputs": [
@@ -1554,8 +1549,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.2 s, sys: 52.4 ms, total: 19.2 s\n",
-      "Wall time: 18.7 s\n"
+      "CPU times: user 19.7 s, sys: 78.6 ms, total: 19.7 s\n",
+      "Wall time: 19.2 s\n"
      ]
     }
    ],
@@ -1577,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "ae79c509-e1b6-4f2b-9a10-371a45634296",
    "metadata": {},
    "outputs": [
@@ -1585,8 +1580,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20.1 s, sys: 52.2 ms, total: 20.1 s\n",
-      "Wall time: 19.9 s\n"
+      "CPU times: user 19.8 s, sys: 50.5 ms, total: 19.9 s\n",
+      "Wall time: 19.4 s\n"
      ]
     }
    ],
