--- a/Efficient_Evaluation.ipynb
+++ b/Efficient_Evaluation.ipynb
@@ -52,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "fad18e8c-21a5-4e56-84a4-c83102e890df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyper_arff_file_path = '/Users/gomeshe/Desktop/data/Hyper100k.arff'\n",
-    "covtfd_arff_file_path = '/Users/gomeshe/Desktop/data/covtNorm_fd2_numDummy50_conceptLen193669.arff'\n",
+    "hyper_arff_file_path = './data/Hyper100k.arff'\n",
     "# Stream with 580k instances and around 100 features (csv)\n",
-    "covtfd_csv_file_path = '/Users/gomeshe/Desktop/data/covtFD.csv'"
+    "covtfd_arff_file_path = './data/covtFD.arff'\n",
+    "covtfd_csv_file_path = './data/covtFD.csv'"
    ]
   },
   {
@@ -83,9 +83,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'AdaptiveRandomForest',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12b4dce50>,\n",
-       " 'wallclock': 50.533289194107056,\n",
-       " 'cpu_time': 61.535568999999995}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10dc16d60>,\n",
+       " 'wallclock': 51.987720012664795,\n",
+       " 'cpu_time': 62.91014199999999}"
       ]
      },
      "metadata": {},
@@ -168,9 +168,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'AdaptiveRandomForest',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x105b0bd00>,\n",
-       " 'wallclock': 54.932321071624756,\n",
-       " 'cpu_time': 60.326436000000015}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1043a6df0>,\n",
+       " 'wallclock': 52.77464509010315,\n",
+       " 'cpu_time': 56.741282}"
       ]
      },
      "metadata": {},
@@ -250,7 +250,8 @@
    "source": [
     "## Synthetic 10kk stream (RTG) with Naive Bayes\n",
     "\n",
-    "```EvaluatePrequential -l bayes.NaiveBayes -e BasicClassificationPerformanceEvaluator -i 10000000 -f 10000000```"
+    "```EvaluatePrequential -l bayes.NaiveBayes -e BasicClassificationPerformanceEvaluator -i 10000000 -f 10000000```\n",
+    "* Using a synthetic generator with a massive amount of instances (e.g. 10 million) has a huge impact whether we use the fast or *python* version of the evaluation. It goes from 12s to 140s/150s.  "
    ]
   },
   {
@@ -263,9 +264,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x103a46b80>,\n",
-       " 'wallclock': 12.506047010421753,\n",
-       " 'cpu_time': 13.003150000000005}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12fe6ffd0>,\n",
+       " 'wallclock': 12.531036138534546,\n",
+       " 'cpu_time': 13.005235000000027}"
       ]
      },
      "metadata": {},
@@ -347,9 +348,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12b63bb80>,\n",
-       " 'wallclock': 149.2997808456421,\n",
-       " 'cpu_time': 149.184702}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652bdf0>,\n",
+       " 'wallclock': 148.4728820323944,\n",
+       " 'cpu_time': 148.631902}"
       ]
      },
      "metadata": {},
@@ -428,7 +429,7 @@
    "source": [
     "## Real stream (covtFD) 580k+ instances with more than 100 features. \n",
     "\n",
-    "using Naive Bayes"
+    "* Using an arff file (which triggers ARFFFileReader internally) shows a 20% improvement in run time when using the fast version in comparison to the *python* one. It goes from 40s to 50s. "
    ]
   },
   {
@@ -441,9 +442,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x103a0d9a0>,\n",
-       " 'wallclock': 40.007524728775024,\n",
-       " 'cpu_time': 42.744568000000015}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652b340>,\n",
+       " 'wallclock': 39.90633821487427,\n",
+       " 'cpu_time': 40.72836899999999}"
       ]
      },
      "metadata": {},
@@ -526,9 +527,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x105b0bb80>,\n",
-       " 'wallclock': 52.40486693382263,\n",
-       " 'cpu_time': 52.16139499999997}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12fb58700>,\n",
+       " 'wallclock': 50.05150485038757,\n",
+       " 'cpu_time': 50.054903000000024}"
       ]
      },
      "metadata": {},
@@ -606,10 +607,11 @@
    "id": "2e89117d-2fb3-42b4-b22b-897211d13bc1",
    "metadata": {},
    "source": [
-    "# Testing the ```prequential_evaluation_fast``` \n",
+    "# Testing  ```prequential_evaluation_fast``` \n",
     "## SRP100 + real dataset with 100k instances\n",
     "\n",
-    "```EvaluatePrequential -l (meta.StreamingRandomPatches -s 100) -s (ArffFileStream -f /Users/gomeshe/Dropbox/ciencia_computacao/lecturer/research/ssl_disagreement/datasets/RBFm/RBFm_100k.arff) -f 1000```"
+    "```EvaluatePrequential -l (meta.StreamingRandomPatches -s 100) -s (ArffFileStream -f ./data/RBFm/RBFm_100k.arff) -f 1000```\n",
+    "* When using a more demanding classifier (such as StreamingRandomPatches with 100 learners) with an ARFF file the impact of the evaluation function becomes negligiable (obtained about the same wallclock time of 200s)."
    ]
   },
   {
@@ -622,10 +624,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'StreamingRandomPatches',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x105b0ba00>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x105b0bca0>,\n",
-       " 'wallclock': 200.23040914535522,\n",
-       " 'cpu_time': 247.14606599999996}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1043a6cd0>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x12fe6ffd0>,\n",
+       " 'wallclock': 200.3791537284851,\n",
+       " 'cpu_time': 240.58956100000006}"
       ]
      },
      "metadata": {},
@@ -820,10 +822,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'StreamingRandomPatches',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12b4fb550>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x105b0b340>,\n",
-       " 'wallclock': 210.6583309173584,\n",
-       " 'cpu_time': 251.697494}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1042e7190>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x12fe6fd30>,\n",
+       " 'wallclock': 200.9605917930603,\n",
+       " 'cpu_time': 222.95696600000008}"
       ]
      },
      "metadata": {},
@@ -1017,6 +1019,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "512cc601-5bed-4905-a24e-f88cc34690ec",
+   "metadata": {},
+   "source": [
+    "* We can observe that there is not much difference between the evaluation functions when we are using the CSV which is eventually loaded to memory.\n",
+    "* Loading the CSV to memory may take a while if it is a massive dataset (this one has about 600k instances and more than 100 features). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "0691853a-2c5b-4f08-8098-38678dbf6cf1",
@@ -1026,8 +1037,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5min 23s, sys: 7.02 s, total: 5min 30s\n",
-      "Wall time: 2min 1s\n"
+      "CPU times: user 4min 48s, sys: 5.75 s, total: 4min 54s\n",
+      "Wall time: 1min 54s\n"
      ]
     }
    ],
@@ -1049,9 +1060,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12b66f0d0>,\n",
-       " 'wallclock': 40.6551251411438,\n",
-       " 'cpu_time': 40.63055299999996}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652b640>,\n",
+       " 'wallclock': 40.77925705909729,\n",
+       " 'cpu_time': 40.82441000000017}"
       ]
      },
      "metadata": {},
@@ -1131,9 +1142,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x105b0bd60>,\n",
-       " 'wallclock': 40.48186278343201,\n",
-       " 'cpu_time': 40.65406299999995}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652bc70>,\n",
+       " 'wallclock': 40.4269802570343,\n",
+       " 'cpu_time': 40.419790999999805}"
       ]
      },
      "metadata": {},
@@ -1221,10 +1232,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12b66fe20>,\n",
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10652ba90>,\n",
        " 'windowed': None,\n",
-       " 'wallclock': 41.434161901474,\n",
-       " 'cpu_time': 40.786838000000216}"
+       " 'wallclock': 40.60796499252319,\n",
+       " 'cpu_time': 40.6174410000001}"
       ]
      },
      "metadata": {},
@@ -1304,10 +1315,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x105b0b910>,\n",
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12fe8e910>,\n",
        " 'windowed': None,\n",
-       " 'wallclock': 40.85849094390869,\n",
-       " 'cpu_time': 40.84165000000007}"
+       " 'wallclock': 40.5016028881073,\n",
+       " 'cpu_time': 40.49966399999994}"
       ]
      },
      "metadata": {},
@@ -1379,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7679f084-87cf-49b8-88c7-8afc54340acd",
    "metadata": {},
    "outputs": [],
@@ -1387,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "1a8aa9fe-b6cb-4cf3-9210-79a2e549ca0f",
    "metadata": {},
    "outputs": [],
