--- a/Learners_API_Examples.ipynb
+++ b/Learners_API_Examples.ipynb
@@ -16,7 +16,7 @@
     "* We can create wrappers for each class, like the AdaptiveRandomForest wrapper. Using an alias in here as we don't want to conflict with the MOA AdaptiveRandomForest. \n",
     "```from ensembles import AdaptiveRandomForest as ARF```\n",
     "\n",
-    "**Notebook last update: 27/09/2023**"
+    "**Notebook last update: 20/10/2023**"
    ]
   },
   {
@@ -29,9 +29,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
+      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -58,7 +59,7 @@
     "from MOALearners import MOAClassifier, MOARegressor\n",
     "\n",
     "\n",
-    "arff_fried_path = '/Users/gomeshe/Desktop/data/data_res_fried.arff'\n",
+    "arff_fried_path = './data/fried.arff'\n",
     "\n",
     "from stream import *"
    ]
