--- a/Using_jpype_MOA_example.ipynb
+++ b/Using_jpype_MOA_example.ipynb
@@ -10,7 +10,7 @@
     "* This notebook does not use the prepare_jpype.py script\n",
     "* It servers as an example of how to use jpype directly (it is easy, but it is good to have this example around).\n",
     "\n",
-    "**Notebook last update: 04/10/2023**"
+    "**Notebook last update: 20/10/2023**"
    ]
   },
   {
@@ -73,8 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "# Add the moa jar to the class path\n",
-    "jpype.addClassPath('/Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar')"
+    "jpype.addClassPath(os.getcwd()+'/jar/moa.jar')"
    ]
   },
   {
@@ -95,8 +96,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.53 s, sys: 1.92 s, total: 4.45 s\n",
-      "Wall time: 1.14 s\n"
+      "CPU times: user 3.3 s, sys: 1.91 s, total: 5.21 s\n",
+      "Wall time: 1.08 s\n"
      ]
     },
     {
