Updates to examples and adding x() to Instances + notebook with example

--- a/DEMO.ipynb
+++ b/DEMO.ipynb
@@ -287,10 +287,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'OnlineBagging',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x113908550>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x1068718d0>,\n",
-       " 'wallclock': 1.523047924041748,\n",
-       " 'cpu_time': 1.8029760000000001}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x10487aa90>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x135086190>,\n",
+       " 'wallclock': 1.5092849731445312,\n",
+       " 'cpu_time': 1.651972999999999}"
       ]
      },
      "execution_count": 4,
@@ -501,12 +501,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "b170a6fc-d7be-455e-91f5-183255643807",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-m maxByteSize (default: 33554432)\n",
+      "Maximum memory consumed by the tree.\n",
+      "-n numericEstimator (default: GaussianNumericAttributeClassObserver)\n",
+      "Numeric estimator to use.\n",
+      "-d nominalEstimator (default: NominalAttributeClassObserver)\n",
+      "Nominal estimator to use.\n",
+      "-e memoryEstimatePeriod (default: 1000000)\n",
+      "How many instances between memory consumption checks.\n",
+      "-g gracePeriod (default: 200)\n",
+      "The number of instances a leaf should observe between split attempts.\n",
+      "-s splitCriterion (default: InfoGainSplitCriterion)\n",
+      "Split criterion to use.\n",
+      "-c splitConfidence (default: 1.0E-7)\n",
+      "The allowable error in split decision, values closer to 0 will take longer to decide.\n",
+      "-t tieThreshold (default: 0.05)\n",
+      "Threshold below which a split will be forced to break ties.\n",
+      "-b binarySplits\n",
+      "Only allow binary splits.\n",
+      "-z stopMemManagement\n",
+      "Stop growing as soon as memory limit is hit.\n",
+      "-r removePoorAtts\n",
+      "Disable poor attributes.\n",
+      "-p noPrePrune\n",
+      "Disable pre-pruning.\n",
+      "-l leafprediction (default: NBAdaptive)\n",
+      "Leaf prediction to use.\n",
+      "-q nbThreshold (default: 0)\n",
+      "The number of instances a leaf should observe before permitting Naive Bayes.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(moa_HAT.CLI_help())"
+    "print(moa_HAT.CLI_help())"
    ]
   },
   {
@@ -554,9 +592,39 @@
    "execution_count": 9,
    "id": "b2cca100-0a41-4abd-a700-f4c640871be7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-l baseLearner (default: trees.HoeffdingTree -g 50 -c 0.01)\n",
+      "Classifier to train on instances.\n",
+      "-s ensembleSize (default: 100)\n",
+      "The number of models.\n",
+      "-o subspaceMode (default: Percentage (M * (m / 100)))\n",
+      "Defines how m, defined by mFeaturesPerTreeSize, is interpreted. M represents the total number of features.\n",
+      "-m subspaceSize (default: 60)\n",
+      "# attributes per subset for each classifier. Negative values = totalAttributes - #attributes\n",
+      "-t trainingMethod (default: Random Patches)\n",
+      "The training method to use: Random Patches, Random Subspaces or Bagging.\n",
+      "-a lambda (default: 6.0)\n",
+      "The lambda parameter for bagging.\n",
+      "-x driftDetectionMethod (default: ADWINChangeDetector -a 1.0E-5)\n",
+      "Change detector for drifts and its parameters\n",
+      "-p warningDetectionMethod (default: ADWINChangeDetector -a 1.0E-4)\n",
+      "Change detector for warnings (start training bkg learner)\n",
+      "-w disableWeightedVote\n",
+      "Should use weighted voting?\n",
+      "-u disableDriftDetection\n",
+      "Should use drift detection? If disabled, then the bkg learner is also disabled.\n",
+      "-q disableBackgroundLearner\n",
+      "Should use bkg learner? If disabled, then trees are reset immediately.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(srp.CLI_help())"
+    "print(srp.CLI_help())"
    ]
   },
   {
@@ -1504,7 +1572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
